add text search for charts
